sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value n
  for (i<- 1 to n){
                ^